# graphnosis-app

./: .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  GRAPHNOSIS.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json
.cargo/: config.toml
.githooks/: README.md  pre-commit
.github/workflows/: build-linux.yml  build-windows.yml  linux-server.yml  release-mas.yml  release.yml
apps/desktop/: about.html  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop-sidecar/: package.json  tsconfig.json
apps/desktop-sidecar/scripts/: generate-docs-content.mjs  generate-skill-demos-content.mjs  ghampus-eval-clean-seed.mjs  ghampus-eval-ipc.mjs  ghampus-eval-isolated.mjs  ghampus-eval-loop.mjs  ghampus-eval-mcp-closeout.mjs  ghampus-eval-mcp-milestone.mjs  ghampus-eval-soak.mjs  mcpb-build.mjs  recall-benchmark-manual.mjs  repair-hollow-skills.mjs  retrain-clean-skills.mjs  run-dispatch-export-sync.mjs  train-four-hollow-skills.mjs  train-ghampus-operator.mjs  train-ghampus-qa-loop.mjs
apps/desktop-sidecar/src/: activity-actors.ts  admin-policy.ts  agent-audit.ts  agent-notifications.ts  agent-policy.ts  agent-tools.ts  agent-types.ts  agent-walker.ts  association-index.ts  attachments-store.ts  away-digest.ts  background-lane-scheduler.ts  brain-engine.ts  catalog-drift.ts  catalog-mdm.ts  catalog-sharepoint.ts  catalog-sso-gate.ts  catalog-subscriptions.ts  client-activity.ts  cloud-llm.ts  compliance.ts  connection-store.ts  consent-prompts.ts  contradiction-health-scheduler.ts  contradiction-health.ts  contradiction-scan.ts  contradiction-utils.ts  correction.ts  crypto-compare.ts  default-skill-pack-types.ts  device-identity.ts  docs-content.generated.ts  docs-ingest.ts  duplicate-scan.ts  edge-prediction.ts  embed-worker.ts  embedding-queue.ts  engram-cli.ts  engram-pack.ts  events.ts  (+110 more)
apps/desktop-sidecar/tests/: correction-parse.test.mjs  correction-scope.test.mjs  sharing-scope.test.mjs
apps/desktop/public/: manifest.json
apps/desktop/scripts/: copy-webui-resource.mjs
apps/desktop/src/: app.css  atlas-engine.ts  atlas.ts  boot.ts  engine-deckgl.ts  engine-three-custom.ts  engine-three-physics-worker.ts  main.ts  mobile.css  platform.ts  theme-tokens.backup.css  theme-tokens.css
apps/desktop/src-tauri/: .taurignore  Cargo.toml  build.rs  entitlements-mas-child.plist  entitlements-mas.plist  entitlements.plist  tauri-mas.conf.json  tauri-windows.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/desktop/src-tauri/capabilities/: about.json  default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: biometric.rs  event_stream.rs  ipc_client.rs  keychain.rs  lib.rs  main.rs  sidecar.rs  tray.rs
apps/desktop/src-tauri/swift/: Info.plist  graphnosis-biometric.swift
apps/desktop/src-tauri/winhello/: main.rs
apps/docs/: .env.example  astro.config.mjs  package.json  tailwind.config.mjs  wrangler.toml
apps/docs/functions/: subscribe.ts
apps/docs/public/: _redirects
apps/docs/scripts/: sync-graphnosis-md.mjs
apps/docs/src/: env.d.ts  (+1 more)
apps/obsidian-plugin/: .gitignore  LICENSE  README.md  manifest.json  package.json  styles.css  tsconfig.json
apps/vscode-extension/: .vscodeignore  package.json  tsconfig.json
deploy/launcher/: README.md  graphnosis-server.bat  graphnosis-server.command  graphnosis-server.sh
deploy/linux/: README.md  graphnosis-server.env.example  graphnosis-server.service
functions/: subscribe.ts
functions/download/: counts.ts  linux.ts  mac.ts  win.ts
integrations/hermes-agent/: PR.md  README.md
integrations/hermes-desktop/: PR.md  README.md
mcpb/: SUBMISSION.md  manifest.json
patches/: @nehloo__graphnosis@0.5.6.patch  fastembed@2.1.0.patch  libsodium-wrappers-sumo.patch
scripts/: build-gsk.mjs  build-gts.mjs  gen-gsk-keypair.mjs  pre-commit-guard.sh  stripe-create-products.mjs
(+306 files in other folders)
