[package]
name = "graphnosis-app"
version = "0.0.1"
description = "Graphnosis — personal second memory"
edition = "2021"
rust-version = "1.77"

[lib]
name = "graphnosis_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "graphnosis-app"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
keyring = "3"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "5"
