[package]
name = "graphnosis-app"
version = "1.14.2"
description = "Graphnosis — personal second memory"
authors = ["Nehloo Interactive LLC"]
# Custom string — FSL-1.1-Apache-2.0 isn't a registered SPDX id (yet),
# but Cargo accepts any string here. crates.io would warn, but we don't
# publish this crate; it ships as the Tauri shell binary only.
license = "FSL-1.1-Apache-2.0"
edition = "2021"
rust-version = "1.77"

[lib]
name = "graphnosis_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "graphnosis-app"
path = "src/main.rs"

[features]
# Enable for signed release builds to use the macOS Keychain instead of the
# 0600 file cache. Add `--features keychain` to the `cargo tauri build` invocation
# in CI / the release pipeline. Dev builds leave this off — the file cache is
# simpler and avoids macOS Keychain audit-token rejections on unsigned binaries.
keychain = []

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
tauri-plugin-deep-link = "2"
# Persists window size, position, maximize, and fullscreen state across
# launches. State lives in <app-data>/.window-state.json — written on
# move/resize/close, restored automatically on window creation.
tauri-plugin-window-state = "2"
keyring = "3"
notify = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
dirs = "5"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6"
